Klass::decode_klass_not_null() asserted on bad oop

XMLWordPrintable

    • gc
    • b21
    • generic
    • generic
    • Verified

      The following test failures were spotted in the 2017-08-08 JDK10-hs nightly:

      nsk/jdi/ReferenceType/equals/equals002
      nsk/jdi/ReferenceType/hashCode/hashcode002
          These two tests failed the following assertion:

          Internal Error (<path>/hotspot/src/share/vm/oops/klass.inline.hpp:66), pid=88837, tid=88889
          assert(check_klass_alignment(result)) failed: address not aligned: 0x00000008baadbabe

          on Linux ARM64 64-bit Server VM. Here's a snippet of the stack
          trace for equals002:

          V [libjvm.so+0x6b3838] report_vm_error(char const*, int, char const*, char const*, ...)+0xe0;; report_vm_error(char const*, int, char const*, char const*, ...)+0xe0
          V [libjvm.so+0x48a4f0] Klass::decode_klass_not_null(unsigned int)+0x74;; Klass::decode_klass_not_null(unsigned int)+0x74
          V [libjvm.so+0x48a6f8] oopDesc::is_oop(bool) const+0x1a4;; oopDesc::is_oop(bool) const+0x1a4
          V [libjvm.so+0x7c76e0] G1ConcurrentMark::mark_in_next_bitmap(oop)+0x150;; G1ConcurrentMark::mark_in_next_bitmap(oop)+0x150
          V [libjvm.so+0x82efd4] G1ParCopyHelper::mark_forwarded_object(oop, oop)+0x1f8;; G1ParCopyHelper::mark_forwarded_object(oop, oop)+0x1f8
          V [libjvm.so+0x82fff4] void G1ParCopyClosure<(G1Barrier)0, (G1Mark)2, false>::do_oop_work<oop>(oop*)+0x28c;; void G1ParCopyClosure<(G1Barrier)0, (G1Mark)2, false>::do_oop_work<oop>(oop*)+0x28c
          V [libjvm.so+0x82e914] G1InitialMarkClosures<(G1Mark)2>::flush()+0x104;; G1InitialMarkClosures<(G1Mark)2>::flush()+0x104
          V [libjvm.so+0x8365e0] G1RootProcessor::evacuate_roots(G1EvacuationRootClosures*, unsigned int)+0x194;; G1RootProcessor::evacuate_roots(G1EvacuationRootClosures*, unsigned int)+0x194
          V [libjvm.so+0x7b5bd8] G1ParTask::work(unsigned int)+0x158;; G1ParTask::work(unsigned int)+0x158
          V [libjvm.so+0x107e7ec] GangWorker::loop()+0xf4;; GangWorker::loop()+0xf4
          V [libjvm.so+0x107cfb8] AbstractGangWorker::run()+0x2c;; AbstractGangWorker::run()+0x2c
          V [libjvm.so+0xd5743c] thread_native_entry(Thread*)+0x118;; thread_native_entry(Thread*)+0x118

        1. hs_err_pid13473.log
          156 kB
          Stefan Karlsson
        2. hs_err_pid21606.log
          247 kB
          Stefan Karlsson

            Assignee:
            Stefan Karlsson
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: