8186035: Klass::decode_klass_not_null() asserted on bad oop

Reviewed-by: tschatzl, sjohanss